# orbit-simulator

./: CMakeLists.txt  README.md  start.sh
include/: obj_parser.h  vec2.h  vec3.h
include/glad/: glad.h
resources/models/Buran/: license.txt
resources/models/Buran2/: buran.mtl
resources/models/death-star-2/: death-star.mtl
resources/models/death-star-fix/: death-star.mtl
resources/shaders/: fragment_shader.frag  light_fragment.frag  orbit.frag  orbit.vert  skybox.frag  skybox.vert  vertex_shader.vert
src/: camera.h  cube.h  draw.cpp  drawtest.cpp  fragment_shader.frag  geometry_shader.geom  glad.c  mesh.h  model.h  physics.h  shader.h  tree.h  vertex_shader.vert
